--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/databasename?useSSL=false
-spring.datasource.username=databaseuser
-spring.datasource.password=databasepassword
+spring.datasource.url=jdbc:mysql://localhost:3306/DBNAME?useSSL=false
+spring.datasource.username=DBUSERNAME
+spring.datasource.password=DBPASSWORD
 spring.jpa.hibernate.ddl-auto=create
 
 spring.resources.static-locations=classpath:/static/
