--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>	
   		</dependency>
+  		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.2</version>
+    		<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
